# log-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
code/demo/: main.cpp
code/include/: logger.hpp
code/source/: logger.cpp
config/: log_config.conf
include/: logger.hpp
